--- a/test1.html
+++ b/test1.html
@@ -19,6 +19,7 @@
     <!-- 在dev修改之后本地提交，切换到master把dev的合并提交推送到远程，远程会显示dev的提交附带信息 -->
     <div>dev再加这一行</div>
     <div>1111</div>
+    <div>222</div>
 </body>
 
 </html>
